<resources>

    <string name="app_name">Ello</string>
    <string name="empty_string">  </string>

    <!-- Menu names -->
    <string name="dial_pad">Dial Pad</string>
    <string name="my_account">My Account</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="paste">PASTE</string>
    <string name="sync_contacts">Sync Contacts</string>
    <string name="about">About</string>


    <!-- content descriptions -->
    <string name="contact_picture">contact picture</string>

    <!-- fragment names -->
    <string name="fragment_contacts_title">Contacts</string>

    <!-- layout items text -->
    <string name="name">Name</string>
    <string name="_5miov">Ello</string>
    <string name="to_register_enter_your_phone_number">To Register Enter Your Phone Number</string>
    <string name="phone_number">phone number</string>
    <string name="register">REGISTER</string>
    <string name="_5miov_will_send_sms_with_token_to_verify_your_number">Ello will send SMS with OTP to verify your number</string>
    <string name="_5miov_will_call_to_verify_your_number">You will receive a phone call from Ello to verify your number</string>
    <string name="enter_token_sent_to_your_phone_number">No Call? Try SMS.</string>
    <string name="token">verification code</string>
    <string name="submit">SUBMIT</string>
    <string name="resend_sms">RESEND SMS</string>
    <string name="send_sms">SEND SMS</string>
    <string name="or">OR</string>
    <string name="resend_allowed_2_times_in_24_hours">* Resend allowed 2 times in 24 hours</string>
    <string name="token_expires_in_5_minutes">Verification code expires in 5 minutes</string>
    <string name="_234123123123">+234123123123</string>
    <string name="enter_phone_hint">enter phone number</string>
    <string name="asign_number_to_existing_account">Assign number to existing account?</string>
    <string name="assign_phone_number">ASSIGN NUMBER</string>
    <string name="to_assign_phone_number_to_your_account_fill_your_account_credentials">To assign phone number to your account fill your account credentials</string>
    <string name="phone_number_registered">Phone number</string>
    <string name="is_already_registered">is already registered</string>
    <string name="fill_your_account_credentials">Please, fill your account credentials</string>
    <string name="i_do_not_have_account">I do not have account</string>
    <string name="_0_contacts">0 contacts</string>
    <string name="set_account_e_mail_and_password">set account e-mail and password</string>



    <string name="to_protect_your_account_enter_e_mail_and_password">To protect your account set e-mail and password</string>
    <string name="choose_password_hint">choose password</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_instructions">*Password must be at least 8 chars long, must have at least one uppercase, one lowercase and one special character </string>

    <string name="password_hint">password</string>
    <string name="e_mail_hint">e-mail</string>
    <string name="have_an_account_already_sign_in_to_start_using_your_existing_credit">Have an account already?\nSign in to start using your existing credit!</string>

    <!-- string sa formatiranjem-->
    <string name="nb_of_contacts_found">%1$d found</string>
    <string name="prenumber_call">tel:%1$s,%2$s</string>
    <string name="phone_number_format">Number %1$s</string>
    <string name="add_plus_before_phone">+%1$s</string>
    <string name="current_credit">Current credit %1$s %2$s</string>
    <string name="mobile_app_version_header">Android-v%1$s</string>
    <string name="google_play_link_to_app">http://play.google.com/store/apps/details?id=%1$s</string>

    <!-- layout items messages errors-->
    <string name="not_valid_phone_number">Invalid phone number </string>
    <string name="not_valid_email">Invalid email </string>
    <string name="not_valid_password">Password must be at least 8 chars long, must have at least one uppercase, one lowercase, one digit and one special character</string>
    <string name="enter_token">Enter verification code</string>
    <string name="confirm_password_error">Confirm password</string>

    <!-- snackbar messages-->
    <string name="no_internet">No Internet</string>
    <string name="no_permission_read_contacts">No permission to load contacts</string>
    <string name="no_permission_make_phone_call">Sorry,no permission to make phone calls!</string>
    <string name="unable_to_make_call">Unable to make a call</string>
    <string name="clipboard_invalid_data_type">Clipboard contains an invalid data type</string>
    <string name="account_email_is_set">Your account is set</string>
    <string name="something_went_wrong">Bad connection. Please,try again!</string>
    <string name="VOIP_not_supported">Unfortunately your current system does not support iOV NET calls."</string>
    <string name="no_SIP_permission">No permission to make VOIP call!</string>
    <string name="must_be_international_number">Must be international number</string>
    <string name="local_calls_not_allowed">Local calls not allowed!</string>


    <!-- set account dialog-->
    <string name="set_account_dialog">To secure your account and current credits please set email and password by clicking on the red button at the bottom of the screen.
    If email and password are not set, you will not be able to recover credits if you reinstall the app, insert SIM card into another device, lose SIM card or phone.\n
    In the meantime feel free to buy credits and use the app with no limits.
    </string>
    <string name="log_out_warning">Please set account email and password or your credit will be lost after log out</string>
    <string name="log_out">Log out</string>


    <!-- SIP messages-->
    <string name="sip_failure_message">Something went wrong!</string>
    <string name="sip_registering">Registering…</string>
    <string name="sip_reg_done">Registration Done.</string>
    <string name="sip_reg_failed">Registration Failed.</string>
    <string name="sip_calling">Calling…</string>
    <string name="sip_busy">Busy.</string>
    <string name="sip_call_established">Call Established.</string>
    <string name="sip_call_ended">Call Ended.</string>
    <string name="sip_button_name">iOV NET</string>
    <string name="regular_call_button_name">SIM call</string>

    <!-- ABOUT FRAGMENT-->
    <string name="about_how_to_use_app">If you have good internet connection use iOV NET button for cheaper calls, otherwise use SIM call button.</string>
    <string name="web_api_version">WebApi version  %1$s</string>
    <string name="mobile_app_version">Mobile App version  %1$s</string>
    <string name="no_audio_permission">No audio permission</string>
    <string name="contacts_menu_item_title">Contacts</string>

    <!-- TERMS OF USE-->
    <string name="terms_of_use_accept">ACCEPT</string>
	<string name="terms_of_use_cancel">CANCEL</string>
	<string name="terms_of_use_title">TERMS OF SERVICE</string>
    <string name="no_recent_calls">No recent calls.</string>
    <string name="end_to_end_encrypted">end-to-end encrypted</string>

    <!-- SHARE FUNCTION-->

    <string name="share_title">Ello  - Make cheap international calls</string>

    <!-- DISCLAIMER-->
    <string name="disclaimer_title_important">Important</string>
    <string name="disclaimer_IUnderstand_button">I Understand</string>
    <string name="no_sms_try_sms_resend">*No SMS? Try Resend SMS .</string>
    <string name="no_call_try_sms">*No Call? Try SMS.</string>
    <string name="make_cheap_international_calls">Make Cheap International Calls</string>

    <!-- SNACKBAR MESSAGES-->
    <string name="call_log_permission_not_granted">Ello needs this permission to verify account by phone call</string>
    <string name="enter_correct_number">Please, go back and correct your number.</string>
    <string name="share">Share</string>
    <string name="recent">Recent</string>

</resources>
