<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
<androidx.constraintlayout.widget.ConstraintLayout

    android:id="@+id/root_about_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment_about.AboutFragment">


    <TextView
        android:id="@+id/mobile_app_ver_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mobile_app_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="app version" />

    <TextView
        android:id="@+id/eb_api_ver_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/web_api_version"
        app:layout_constraintEnd_toEndOf="@+id/mobile_app_ver_textView"
        app:layout_constraintStart_toStartOf="@+id/mobile_app_ver_textView"
        app:layout_constraintTop_toBottomOf="@+id/mobile_app_ver_textView"
        tools:text="webapi" />

    <TextView
        android:id="@+id/how_to_use_app_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/about_how_to_use_app"
        app:layout_constraintEnd_toEndOf="@+id/eb_api_ver_textView"
        app:layout_constraintStart_toStartOf="@+id/eb_api_ver_textView"
        app:layout_constraintTop_toBottomOf="@+id/eb_api_ver_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>