<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/auth_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/authorization_rootLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            tools:context=".ui.registrationauthorization.AuthorizationFragment">

            <TextView
                android:id="@+id/logo_auth_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5miov"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_exists_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/enter_token_sent_to_your_phone_number"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/token_textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_form_fields"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="@dimen/margin_form_fields"
                android:hint="@string/token"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auth_textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/token_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/number_exists_text"
                    app:layout_constraintStart_toStartOf="@+id/number_exists_text"
                    app:layout_constraintTop_toBottomOf="@+id/auth_phone_textView" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:text="@string/submit"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/token_textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/token_textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/token_textInputLayout" />


            <TextView
                android:id="@+id/auth_phone_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/_234123123123"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="@+id/number_exists_text"
                app:layout_constraintHorizontal_bias="0.527"
                app:layout_constraintStart_toStartOf="@+id/number_exists_text"
                app:layout_constraintTop_toBottomOf="@+id/number_exists_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resend_sms_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="108dp"
                android:text="@string/resend_sms"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="@+id/submit_button"
                app:layout_constraintStart_toStartOf="@+id/submit_button"
                app:layout_constraintTop_toBottomOf="@+id/submit_button" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/resend_sms_button"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submit_button" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/resend_sms_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/submit_button" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50121653" />

            <TextView
                android:id="@+id/or_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                app:layout_constraintBottom_toTopOf="@+id/resend_sms_button"
                app:layout_constraintEnd_toStartOf="@+id/divider2"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/submit_button" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_sms_try_free_call_verification"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@+id/resend_sms_button"
                app:layout_constraintTop_toBottomOf="@+id/resend_sms_button" />

            <TextView
                android:id="@+id/auth_textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/token_expires_in_5_minutes"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="@+id/auth_phone_textView"
                app:layout_constraintStart_toStartOf="@+id/auth_phone_textView"
                app:layout_constraintTop_toBottomOf="@+id/auth_phone_textView" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.11" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/auth_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />


    </FrameLayout>
</layout>