<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegistrationAuthorization.RegistrationFragment">


        <TextView
            android:id="@+id/logo_textVIew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5miov"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register1_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_register_enter_your_phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_phone_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:hint="@string/phone_number"
            app:layout_constraintEnd_toEndOf="@+id/register1_textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/register1_textView"
            app:layout_constraintTop_toBottomOf="@+id/register2_textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/enter_phone_textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/enter_phone_textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/enter_phone_textInputLayout" />

        <TextView
            android:id="@+id/register2_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_5miov_will_send_sms_with_token_to_verify_your_number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:layout_constraintEnd_toEndOf="@+id/register1_textView"
            app:layout_constraintStart_toStartOf="@+id/register1_textView"
            app:layout_constraintTop_toBottomOf="@+id/register1_textView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_num_toAccount_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="Add number to existing account?"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@android:color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button"
            app:layout_constraintVertical_bias="0.8"
            app:strokeColor="@color/colorPrimary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="328dp" />
</FrameLayout>
</layout>